# cra

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
Examples/: billing.py  helpers.js  index.js  security_issues.py  user_api.py
Reports/: Examples_2025-09-15_1248_ad98.md  Examples_2025-09-15_1735_f276.md  billing.py_2025-09-15_1307_2400.md  billing.py_2025-09-15_1738_156f.md  helpers.js_2025-09-15_1251_5a27.md  helpers.js_2025-09-15_1759_224e.md  index.js_2025-09-15_1251_1c82.md  index.js_2025-09-15_1758_d14e.md  security_issues.py_2025-09-15_1250_0b54.md  security_issues.py_2025-09-15_1737_4912.md  user_api.py_2025-09-15_1250_0e36.md  user_api.py_2025-09-15_1757_df5f.md
src/cra/: __init__.py  chat.py  config.py  dtos.py  llm_diff.py  llm_report.py  main.py  utils.py
src/cra/lint_tool/: .eslintrc.json  js_linters.py  main.py  py_linters.py
src/cra_web/: README.md  crud.py  database.py  dtos.py  main.py  models.py  parsers.py
src/cra_web/templates/: index.html  report.html
tests/: test_cra.py
