[project]
name = "cra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.6",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "markdown>=3.9",
    "openai>=1.107.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
